# Sox

./: Makefile  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: main.yaml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/etc/: geosite.db
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  main.rs  menu.rs
src/components/: Modal.vue  Option.vue  Select.vue
src/modules/: ServerForm.vue  ServerList.vue
src/store/: setting.ts
src/util/: config.ts
src/views/: Logger.vue  Server.vue  Setting.vue
