[package]
name = "sox"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = ["isolation"] }

[dependencies]
tauri = { version = "1.3", features = ["devtools", "dialog-open", "dialog-save", "isolation", "path-all", "process-command-api", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pinger = "0.4.1"
thiserror = "1"

[target.'cfg(unix)'.dependencies]
interfaces = "0.0.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
